--- a/res/layout/leave_fragment.xml
+++ b/res/layout/leave_fragment.xml
@@ -6,58 +6,32 @@
 
     <TextView
         android:id="@+id/hoursAvailableLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hours_avail"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dip"
-        android:textSize="10pt" />
+        style="@style/LeaveViewText.Top"
+        android:text="@string/hours_avail" />
     <TextView
         android:id="@+id/hoursAvailable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/hoursAvailableLabel"
-        android:layout_centerHorizontal="true"
-        android:textSize="30pt" />
+        style="@style/LeaveViewText.Content"
+        android:layout_below="@+id/hoursAvailableLabel" />
     <TextView
         android:id="@+id/hoursAvailableAsOf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/LeaveViewText"
         android:layout_below="@+id/hoursAvailable"
-        android:text="@string/hours_avail_as_of"
-        android:layout_centerHorizontal="true"
-        android:textSize="10pt" />
+        android:text="@string/hours_avail_as_of" />
     <TextView
         android:id="@+id/asOfDateDesc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/LeaveViewText"
         android:layout_below="@+id/hoursAvailableAsOf"
-        android:text="@string/default_as_of_date"
-        android:layout_centerHorizontal="true"
-        android:textSize="10pt" />
+        android:text="@string/default_as_of_date" />
     <LinearLayout
-  android:layout_width="fill_parent"
-  android:orientation="horizontal"
-  android:weightSum="2.0" 
-  android:padding="1px"
-  android:layout_height="wrap_content"
-  
-  android:layout_weight="0.05"
-  android:layout_alignParentBottom="true">
+  		style="@style/ButtonLayout">
 
-  <Button android:id="@+id/useHours"
-          android:layout_weight="1"
-          android:layout_height="wrap_content"
-          android:layout_width="fill_parent"
-          android:text="Use Hours"
-          android:textSize="6pt"/>
+  		<Button android:id="@+id/useHours"
+          style="@style/QuickUseButton"
+          android:text="@string/quick_use_hours" />
 
-  <Button android:id="@+id/changeAsOfDate"
-          android:layout_weight="1"
-          android:layout_height="wrap_content"
-          android:layout_width="fill_parent"
-          android:text="Change As Of Date"
-          android:textSize="6pt" />
+  		<Button android:id="@+id/changeAsOfDate"
+          style="@style/QuickUseButton"
+          android:text="@string/quick_use_date" />
 
 </LinearLayout>
 </RelativeLayout>
