--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -3,4 +3,49 @@
     <style name="VacationTheme" parent="android:Theme.Light">
     	<item name="android:windowNoTitle">false</item>
     </style>
+    <style name="LeaveViewText">
+    	<item name="android:textSize">10pt</item>
+    	<item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerHorizontal">true</item>
+    </style>
+    <style name="LeaveViewText.Top">
+    	<item name="android:layout_marginTop">60dip</item>
+    </style>
+    <style name="LeaveViewText.Top.Land">
+    	<item name="android:layout_marginTop">10dip</item>
+    </style>
+    <style name="LeaveViewText.Content">
+    	<item name="android:textSize">30pt</item>
+    </style>
+    <style name="ButtonLayout">
+    	<item name="android:layout_width">fill_parent</item>
+  		<item name="android:orientation">horizontal</item>
+  		<item name="android:weightSum">2.0</item> 
+  		<item name="android:padding">1px</item>
+  		<item name="android:layout_height">wrap_content</item>
+  		<item name="android:layout_weight">0.05</item>
+  		<item name="android:layout_alignParentBottom">true</item>
+    </style>
+    <style name="QuickUseButton">
+    	<item name="android:layout_weight">1</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:textSize">6pt</item>
+    </style>
+    <style name="ViewPager">
+    	<item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+    <style name="ViewPagerIndicator">
+    	<item name="android:layout_height">wrap_content</item>
+    	<item name="android:layout_width">fill_parent</item>
+        <item name="com.jbalboni.vacation:footerLineHeight">1dp</item>
+        <item name="com.jbalboni.vacation:footerIndicatorHeight">3dp</item>
+        <item name="com.jbalboni.vacation:footerIndicatorStyle">underline</item>
+        <item name="com.jbalboni.vacation:textColor">#AA000000</item>
+        <item name="com.jbalboni.vacation:selectedColor">#FF000000</item>
+        <item name="com.jbalboni.vacation:footerColor">#ff33b5e5</item>
+        <item name="com.jbalboni.vacation:selectedBold">false</item>
+    </style>
 </resources>
