--- a/res/menu/leave_menu.xml
+++ b/res/menu/leave_menu.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/settings"
-          android:icon="@drawable/ic_menu_settings"
+	<item android:id="@+id/menu_add"
+          android:icon="@drawable/ic_menu_add"
           android:showAsAction="ifRoom"
-          android:title="Settings" />
-    <item android:id="@+id/leaveHistory"
-          android:icon="@drawable/ic_menu_recent_history"
-          android:showAsAction="ifRoom"
-          android:title="Leave History" />
+          android:title="Edit Category" />
+    <item android:id="@+id/menu_edit"
+          android:icon="@drawable/ic_menu_edit"
+          android:title="Edit Category" />
+    <item android:id="@+id/menu_delete"
+          android:icon="@drawable/ic_menu_delete"
+          android:title="Delete Category" />
 </menu>
