--- a/res/layout/leave_item_activity.xml
+++ b/res/layout/leave_item_activity.xml
@@ -6,7 +6,6 @@
     
 	<fragment android:name="com.jbalboni.vacation.LeaveEditFragment"
             android:id="@+id/leaveEditFragment"
-            android:layout_weight="1"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent" />
 </LinearLayout>
