--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -61,7 +61,7 @@
     	<item name="android:layout_width">fill_parent</item>
         <item name="android:textColor">#ff33b5e5</item>
         <item name="android:background">@drawable/underline</item>
-        <item name="android:paddingLeft">10px</item>
+        <item name="android:padding">10px</item>
         <item name="android:textSize">15sp</item>
     </style>
 </resources>
