--- a/res/layout/leave_category.xml
+++ b/res/layout/leave_category.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     
-	<fragment android:name="com.jbalboni.vacation.LeaveCategoryFragment"
+	<fragment android:name="com.jbalboni.vacation.ui.LeaveCategoryFragment"
             android:id="@+id/leaveCategoryFragment"
             android:layout_weight="1"
             android:layout_width="0dp"
