--- a/res/layout/leave_history.xml
+++ b/res/layout/leave_history.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     
-	<fragment android:name="com.jbalboni.vacation.LeaveHistoryFragment"
+	<fragment android:name="com.jbalboni.vacation.ui.LeaveHistoryFragment"
             android:id="@+id/leaveHistoryFragment"
             android:layout_weight="1"
             android:layout_width="0dp"
