--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -8,14 +8,8 @@
         <item>Monthly</item>
     </array>
     <array
-        name="leave_cap_type_vals">
-        <item>None</item>
-        <item>Max</item>
-        <item>Carryover</item>
-    </array>
-    <array
         name="leave_cap_types">
-        <item>None</item>
+        <item>No Limit</item>
         <item>Maximum number of hours</item>
         <item>Carryover limit at year end</item>
     </array>
