Clicking on avail hours opens category hist

--- a/res/layout/leave_fragment.xml
+++ b/res/layout/leave_fragment.xml
@@ -11,7 +11,9 @@
     <TextView
         android:id="@+id/hoursAvailable"
         style="@style/LeaveViewText.Content"
-        android:layout_below="@+id/hoursAvailableLabel" />
+        android:layout_below="@+id/hoursAvailableLabel"
+        android:onClick="onClickAvailable"
+		android:clickable="true" />
     <TextView
         android:id="@+id/hoursAvailableAsOf"
         style="@style/LeaveViewText"
